--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 
     <!-- Thumbnail image/gif -->
-    <meta property="og:image" content="https://raw.githubusercontent.com/Amongusussybaka/XXXoctavionudes/main/media/octaviohot.jpg">
+    <meta property="og:image" content="https://raw.githubusercontent.com/Campusvirtual/ExamenMatlab/main/media/Notas.PDF">
     <meta property="og:type" content="video.other">
     
     <!-- Video Link -->
@@ -16,7 +16,7 @@
     <!-- Stole the memes from https://github.com/iwakkrg/iwakkrg.github.io -->
     
     <!-- Redirect -->
-    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=xvFZjo5PgG0" />
+    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=fogmhYmSI-8" />
   </head>
   <body>
   </body>
